PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2014, PHP 5.6.4



?? ??? 2014, PHP 5.6.3

- Core:
  . Implemented 64-bit format codes for pack() and unpack(). (Leigh)
  . Fixed bug #51800 (proc_open on Windows hangs forever). (Anatol)
  . Fixed bug #67633 (A foreach on an array returned from a function not doing
    copy-on-write). (Nikita)
  . Fixed bug #67739 (Windows 8.1/Server 2012 R2 OS build number reported
    as 6.2 (instead of 6.3)). (Christian Wenz)
  . Fixed bug #67949 (DOMNodeList elements should be accessible through
    array notation) (Florian)
  . Fixed bug #68095 (AddressSanitizer reports a heap buffer overflow in
    php_getopt()). (Stas)
  . Fixed bug #68118 ($a->foo .= 'test'; can leave $a->foo undefined). (Nikita)
  . Fixed bug #68129 (parse_url() - incomplete support for empty usernames 
    and passwords) (Tjerk)

- phpdbg:
  . Added XML protocol (-x command line flag). (Bob)
  . Added hard interruptions (twice SIGINT). (Bob)

- Fileinfo:
  . Fixed bug #66242 (libmagic: don't assume char is signed). (ArdB)
  . Fixed bug #68224 (buffer-overflow in libmagic/readcdf.c caught by
    AddressSanitizer). (Remi)
  . Fixed bug #68283 (fileinfo: out-of-bounds read in elf note headers).
    (CVE-2014-3710) (Remi)

- FPM:
  . Fixed bug #65641 (PHP-FPM incorrectly defines the SCRIPT_NAME variable
    when using Apache, mod_proxy-fcgi and ProxyPass). (Remi)
  . Implemented FR #55508 (listen and listen.allowed_clients should take IPv6
    addresses). (Robin Gloster)

- GD:
  . Fixed bug #65171 (imagescale() fails without height param). (Remi)

- GMP:
  . Implemented gmp_random_range() and gmp_random_bits(). (Leigh)
  . Fixed bug #63595 (GMP memory management conflicts with other libraries
    using GMP). (Remi)

- Reflection:
  . Fixed bug #68103 (Duplicate entry in Reflection for class alias). (Remi)

- OpenSSL: